<resources>
<string name="app_name">NewsFilter</string>
<string name="new_page_name">Name for the new Page</string>
<string name="new_page_url">URL of the Page</string>
<string name="new_page_tags">Tags to filter</string>
<string name="new_page">New Page</string>
<string name="group_new">New category</string>
<string name="page_name">Page name</string>
<string name="page_url">URL</string>
<string name="page_tags">Tags</string>
<string name="page_tags_list">Coma separated list of tags</string>
<string name="file_creation_exception">Config file does not exist and cannot be created.</string>
<string name="button_apply">Apply</string>
<string name="button_reset">Reset</string>
<string name="button_save">Save</string>
<string name="button_cancel">Cancel</string>
<string name="button_delete">Delete</string>
<string name="pages_group">Pages</string>

</resources>
