<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible" />

    <EditText
        android:id="@+id/page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_page_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/page_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_page_url"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/page_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/page_tags_list"
        android:inputType="textMultiLine"
        android:singleLine="false" />

</LinearLayout>